--- a/er/er.html
+++ b/er/er.html
@@ -624,7 +624,7 @@ To obtain additional rights of use, visit <a href="http://www.opengeospatial.org
 <li><a href="#Use_Cases">7. Use Case Summary</a>
 <ul class="sectlevel2">
 <li><a href="#_introduction">7.1. Introduction</a></li>
-<li><a href="#_use_case_1">7.2. Use Case 1</a></li>
+<li><a href="#_use_cases_considered_in_design_process">7.2. Use Cases Considered in Design Process</a></li>
 </ul>
 </li>
 <li><a href="#Standards_Best_Practices">8. Applicable Best Practices and Standards</a>
@@ -997,13 +997,89 @@ best practices and standards tested.</p>
 <div class="sect2">
 <h3 id="_introduction"><a class="anchor" href="#_introduction"></a>7.1. Introduction</h3>
 <div class="paragraph">
-<p><strong>Summary of use case considerations and overview</strong></p>
+<p>ELFIE design work was directed by a number of use cases that participants
+submitted to the project that are either hurdles to systems they maintain
+or would be nice additions to systems they rely on as users. Many of these
+use cases were described and used for discussion and vetting of ideas only,
+others were taken further with implementation of example encoded linked data
+documents and client code to visualize data involved in the use case.</p>
+</div>
+<div class="paragraph">
+<p>The full suite of use cases considered durring the design phase of the project
+are described below. Each use cases takes the form of a simple description of
+who or what system has an interest in what related datasets. Specific datasets are
+listed to clarify the scope and provide a starting point for technical design
+work. Use cases that were implemented as demonstrations of the design outcomes
+were described in more detail to include notional diagrams of how datasets
+involved link to eachother, a thorough description of the use case, and an
+example application that speaks to and/or satisfies the needs of the use case.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_use_case_1"><a class="anchor" href="#_use_case_1"></a>7.2. Use Case 1</h3>
-<div class="paragraph">
-<p><strong>Derive from use case write ups per the template</strong></p>
+<h3 id="_use_cases_considered_in_design_process"><a class="anchor" href="#_use_cases_considered_in_design_process"></a>7.2. Use Cases Considered in Design Process</h3>
+<div class="ulist">
+<ul>
+<li>
+<p><strong>Use Case 1 Name</strong></p>
+<div class="ulist">
+<ul>
+<li>
+<p>One Sentence Summary</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Dataset 1</p>
+</li>
+<li>
+<p>Dataset 2</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p><strong>Use Case 2 Name</strong></p>
+<div class="ulist">
+<ul>
+<li>
+<p>One Sentence Summary</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Dataset 1</p>
+</li>
+<li>
+<p>Dataset 2</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p><strong>Use Case 3 Name</strong></p>
+<div class="ulist">
+<ul>
+<li>
+<p>One Sentence Summary</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Dataset 1</p>
+</li>
+<li>
+<p>Dataset 2</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
+</div>
+</li>
+</ul>
 </div>
 </div>
 </div>
