--- a/er/er.html
+++ b/er/er.html
@@ -997,8 +997,8 @@ best practices and standards tested.</p>
 <div class="sect2">
 <h3 id="_introduction"><a class="anchor" href="#_introduction"></a>7.1. Introduction</h3>
 <div class="paragraph">
-<p>ELFIE design work was directed by a number of use cases that participants
-submitted to the project that are either hurdles to systems they maintain
+<p>ELFIE design work was directed by a number of use cases with extensive need
+for linked environmental data. These use cases are either hurdles to systems they maintain
 or would be nice additions to systems they rely on as users. Many of these
 use cases were described and used for discussion and vetting of ideas only,
 others were taken further with implementation of example encoded linked data
@@ -1017,69 +1017,120 @@ example application that speaks to and/or satisfies the needs of the use case.</
 </div>
 <div class="sect2">
 <h3 id="_use_cases_considered_in_design_process"><a class="anchor" href="#_use_cases_considered_in_design_process"></a>7.2. Use Cases Considered in Design Process</h3>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>River network linked data to address hydrologic drought and ecology</strong></dt>
+<dd>
+<p>Water consumers and decision makers are interested in potential ecological and economic impacts of additonal water use.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Use Case 1 Name</strong></p>
-<div class="ulist">
-<ul>
-<li>
-<p>One Sentence Summary</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Dataset 1</p>
+<p>River network</p>
 </li>
 <li>
-<p>Dataset 2</p>
+<p>Incremental catchments</p>
+</li>
+<li>
+<p>Low flow and temperature sensitive species distributions</p>
+</li>
+<li>
+<p>Monitoring locations</p>
+</li>
+<li>
+<p>Low flow and temperature forecasts</p>
+</li>
+<li>
+<p>Ecological stream classification</p>
+</li>
+<li>
+<p>Historical streamflow characteristics</p>
+</li>
+<li>
+<p>Flow and temperature regulations</p>
 </li>
 </ul>
 </div>
-</li>
-</ul>
+</dd>
+</dl>
 </div>
-</li>
-<li>
-<p><strong>Use Case 2 Name</strong></p>
+</dd>
+<dt class="hdlist1"><strong>Stream water quality and quantity monitoring</strong></dt>
+<dd>
+<p>Water consumers are interested in ambient stream characteristics and water quality impacts of water allocation decisions.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
 <div class="ulist">
 <ul>
 <li>
-<p>One Sentence Summary</p>
+<p>River network</p>
+</li>
+<li>
+<p>Monitoring locations</p>
+</li>
+<li>
+<p>Water quality data</p>
+</li>
+<li>
+<p>Water quantity data</p>
+</li>
+<li>
+<p>Water allocation information</p>
+</li>
+<li>
+<p>Diversions and discharges</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</dd>
+<dt class="hdlist1"><strong>Flood risks and impacts</strong></dt>
+<dd>
+<p>A person in a flood-impacted area needs information about the risks to them for a forecast or ongoing flood event.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
 <div class="ulist">
 <ul>
 <li>
-<p>Dataset 1</p>
+<p>River network</p>
 </li>
 <li>
-<p>Dataset 2</p>
+<p>Stream flow and stage forecasts</p>
+</li>
+<li>
+<p>Topography</p>
+</li>
+<li>
+<p>Flood depth and extent data for event</p>
+</li>
+<li>
+<p>Flood plain map(s)</p>
+</li>
+<li>
+<p>Flood control assets</p>
+</li>
+<li>
+<p>Impacted transportation assets</p>
+</li>
+<li>
+<p>At risk critical infrastructure</p>
 </li>
 </ul>
 </div>
-</li>
-</ul>
+</dd>
+</dl>
 </div>
-</li>
-<li>
-<p><strong>Use Case 3 Name</strong></p>
-<div class="ulist">
-<ul>
-<li>
-<p>One Sentence Summary</p>
-<div class="ulist">
-<ul>
-<li>
-<p>Dataset 1</p>
-</li>
-<li>
-<p>Dataset 2</p>
-</li>
-</ul>
-</div>
-</li>
-</ul>
-</div>
-</li>
-</ul>
+</dd>
+</dl>
 </div>
 </div>
 </div>
