and the new html

--- a/er/er.html
+++ b/er/er.html
@@ -1130,6 +1130,225 @@ example application that speaks to and/or satisfies the needs of the use case.</
 </dl>
 </div>
 </dd>
+<dt class="hdlist1"><strong>Water quality impacts monitorying of mining activities</strong></dt>
+<dd>
+<p>A waterquality analyst needs to know what data is available to assess baseline and impacted conditions of a waterbody impacted by mine-related runoff.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
+<div class="ulist">
+<ul>
+<li>
+<p>River network</p>
+</li>
+<li>
+<p>On network waterbodies</p>
+</li>
+<li>
+<p>Realtime water quality monitoring locations and data</p>
+</li>
+<li>
+<p>Water quality sampling locations and data</p>
+</li>
+<li>
+<p>Mine locations</p>
+</li>
+<li>
+<p>Snowpack and runoff</p>
+</li>
+<li>
+<p>River flow monitoring locations and data</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</dd>
+<dt class="hdlist1"><strong>Cross boarder monitoring index</strong></dt>
+<dd>
+<p>An analyst working in a cross boarder watershed or aquifer needs information characterizing their study region from another country of jurisdiction.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
+<div class="ulist">
+<ul>
+<li>
+<p>River network data</p>
+</li>
+<li>
+<p>Catchment data</p>
+</li>
+<li>
+<p>Aquifer data</p>
+</li>
+<li>
+<p>Streamflow monitoring locations and data</p>
+</li>
+<li>
+<p>Aquifer monitoring wells and data</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</dd>
+<dt class="hdlist1"><strong>Water budget summary</strong></dt>
+<dd>
+<p>A person interested in a basic summary of the water budget for a given watershed needs information about the watershed and its waterbudget data.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
+<div class="ulist">
+<ul>
+<li>
+<p>Watershed boundary</p>
+</li>
+<li>
+<p>Watershed outlet location</p>
+</li>
+<li>
+<p>Waterbudget component data</p>
+</li>
+<li>
+<p>Links to additional information</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</dd>
+<dt class="hdlist1"><strong>Watershed data index</strong></dt>
+<dd>
+<p>A person with a stake in the conditions of a given watershed needs an index of all water-quality related information about the watershed.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
+<div class="ulist">
+<ul>
+<li>
+<p>Impaired (e.g. poluted or degraded) waters</p>
+</li>
+<li>
+<p>Drinking water quality violation reports</p>
+</li>
+<li>
+<p>Facilities with discharge permits</p>
+</li>
+<li>
+<p>Water quality infrastructure investments</p>
+</li>
+<li>
+<p>Watershed characteristics</p>
+</li>
+<li>
+<p>Modeled data such as nutrient concentrations</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</dd>
+<dt class="hdlist1"><strong>Flood monitoring at bridges</strong></dt>
+<dd>
+<p>A jurisdiction with significant infrastructure near or over waterways needs a system to link waterways, bridges, and various observations for situational awareness and model calibration/validation.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relavant datasets</strong></dt>
+<dd>
+<div class="ulist">
+<ul>
+<li>
+<p>River network</p>
+</li>
+<li>
+<p>Bridge inventory</p>
+</li>
+<li>
+<p>Monitoring stations and data</p>
+</li>
+<li>
+<p>Locations where model results are available</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</dd>
+<dt class="hdlist1"><strong>Flood Impact Study</strong></dt>
+<dd>
+<p>A hydrologist conducting a flood impact study needs to collect relevant information from parious agencies.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
+<div class="ulist">
+<ul>
+<li>
+<p>River network</p>
+</li>
+<li>
+<p>Watershed boundaries</p>
+</li>
+<li>
+<p>Hydrologic locations of vulnerable infrastructure</p>
+</li>
+<li>
+<p>Hydrologic locations of monitoring stations and data</p>
+</li>
+<li>
+<p>Meteorological monitoring stations and data</p>
+</li>
+<li>
+<p>Elevation data</p>
+</li>
+<li>
+<p>Water table / aquifer data</p>
+</li>
+<li>
+<p>Rainfall forecast</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</dd>
+<dt class="hdlist1"><strong>Surface water impacted groundwater level forecasting</strong></dt>
+<dd>
+<p>A groundwater extraction modeler needs information about surface water that replenishes groundwater so they can understand and forecast groundwater availability.</p>
+<div class="dlist">
+<dl>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
+<dd>
+<div class="ulist">
+<ul>
+<li>
+<p>Groundwater wells and level data</p>
+</li>
+<li>
+<p>Surface water monitoring sites and flow data</p>
+</li>
+<li>
+<p>Meteorological monitoring sites and observations</p>
+</li>
+<li>
+<p>Output predictions at groundwater prediction wells</p>
+</li>
+</ul>
+</div>
+</dd>
+</dl>
+</div>
+</dd>
 </dl>
 </div>
 </div>
