--- a/er/er.html
+++ b/er/er.html
@@ -849,7 +849,7 @@ To focus the work, the IE attempted to avoid issues not directly related to enco
 </div>
 <div class="paragraph">
 <p>As described in detail later, the IE has specified two constrained views of a resolved linked data graph that are specified with modular SHaCL shapes.
-These specific graph views could be implemented using the "_view" poattern of the Linked Data API or as the payload returned from a REST API endpoint.
+These specific graph views could be implemented using the "_view" pattern of the Linked Data API or as the payload returned from a REST API endpoint.
 Using this approach, the recommendation takes advantage of the power and flexibility of Linked Open Data while providing just enough constraint and guidance to encourage interoperability.
 By specifying a partially resolve graph view, it also allows resources that are not traversable as linked open data (for watever reason) to be incorporated into a linked data system.
 This mechanism should provide a gateway to inclusion in and understanding the value of the Linked Open Data cloud.</p>
@@ -1005,13 +1005,13 @@ others were taken further with implementation of example encoded linked data
 documents and client code to visualize data involved in the use case.</p>
 </div>
 <div class="paragraph">
-<p>The full suite of use cases considered durring the design phase of the project
+<p>The full suite of use cases considered during the design phase of the project
 are described below. Each use cases takes the form of a simple description of
 who or what system has an interest in what related datasets. Specific datasets are
 listed to clarify the scope and provide a starting point for technical design
 work. Use cases that were implemented as demonstrations of the design outcomes
 were described in more detail to include notional diagrams of how datasets
-involved link to eachother, a thorough description of the use case, and an
+involved link to each other, a thorough description of the use case, and an
 example application that speaks to and/or satisfies the needs of the use case.</p>
 </div>
 </div>
