editing sample files: naming and typing relations

--- a/Tools/Bliv/index.html
+++ b/Tools/Bliv/index.html
@@ -1090,7 +1090,7 @@ if (document.getElementById('stabilize').checked)
 
 function getDataURL(id){
 	var myArray = new Array();
-	var property= "the observerd Property";
+	var property= "the observed Property";
 	
 		myArray[0] = property;
 		myArray[1] = id;
