er.html rebuild

--- a/er/er.html
+++ b/er/er.html
@@ -625,6 +625,7 @@ To obtain additional rights of use, visit <a href="http://www.opengeospatial.org
 <ul class="sectlevel2">
 <li><a href="#_introduction">7.1. Introduction</a></li>
 <li><a href="#_use_cases_considered_in_design_process">7.2. Use Cases Considered in Design Process</a></li>
+<li><a href="#_use_cases_implemented_as_demonstrations_of_outcomes">7.3. Use Cases Implemented as Demonstrations of Outcomes</a></li>
 </ul>
 </li>
 <li><a href="#Standards_Best_Practices">8. Applicable Best Practices and Standards</a>
@@ -879,14 +880,14 @@ Note that inclusion of other properties is encouraged and implementors can ignor
 between and among features described by domain-specific feature models and
 observations data that describe the features. Within this, ELFIE aimed to
 leverage existing standards and best practices while maintaining a high
-degree of simplicity toward the goal of adoptibility by developers and
+degree of simplicity toward the goal of adoptability by developers and
 users with a wide array of technical skill levels. Combining these goals
 led to IE participants to seek solutions that</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p>are ubiquitous and easily adoptible in any programming language,</p>
+<p>are ubiquitous and easily adoptable in any programming language,</p>
 </li>
 <li>
 <p>apply best practices for linked data on the web,</p>
@@ -1005,12 +1006,12 @@ others were taken further with implementation of example encoded linked data
 documents and client code to visualize data involved in the use case.</p>
 </div>
 <div class="paragraph">
-<p>The full suite of use cases considered during the design phase of the project
+<p>The full suite of use cases considered durring the design phase of the project
 are described below. Each use cases takes the form of a simple description of
 who or what system has an interest in what related datasets. Specific datasets are
 listed to clarify the scope and provide a starting point for technical design
 work. Use cases that were implemented as demonstrations of the design outcomes
-were described in more detail to include notional diagrams of how datasets
+are described in more detail to include notional diagrams of how datasets
 involved link to each other, a thorough description of the use case, and an
 example application that speaks to and/or satisfies the needs of the use case.</p>
 </div>
@@ -1021,7 +1022,7 @@ example application that speaks to and/or satisfies the needs of the use case.</
 <dl>
 <dt class="hdlist1"><strong>River network linked data to address hydrologic drought and ecology</strong></dt>
 <dd>
-<p>Water consumers and decision makers are interested in potential ecological and economic impacts of additonal water use.</p>
+<p>Water consumers and decision makers are interested in potential ecological and economic impacts of additional water use.</p>
 <div class="dlist">
 <dl>
 <dt class="hdlist1"><strong>Relevant datasets</strong></dt>
@@ -1130,9 +1131,9 @@ example application that speaks to and/or satisfies the needs of the use case.</
 </dl>
 </div>
 </dd>
-<dt class="hdlist1"><strong>Water quality impacts monitorying of mining activities</strong></dt>
+<dt class="hdlist1"><strong>Water quality impacts monitoring of mining activities</strong></dt>
 <dd>
-<p>A waterquality analyst needs to know what data is available to assess baseline and impacted conditions of a waterbody impacted by mine-related runoff.</p>
+<p>A water quality analyst needs to know what data is available to assess baseline and impacted conditions of a waterbody impacted by mine-related runoff.</p>
 <div class="dlist">
 <dl>
 <dt class="hdlist1"><strong>Relevant datasets</strong></dt>
@@ -1166,9 +1167,9 @@ example application that speaks to and/or satisfies the needs of the use case.</
 </dl>
 </div>
 </dd>
-<dt class="hdlist1"><strong>Cross boarder monitoring index</strong></dt>
+<dt class="hdlist1"><strong>Cross border monitoring index</strong></dt>
 <dd>
-<p>An analyst working in a cross boarder watershed or aquifer needs information characterizing their study region from another country of jurisdiction.</p>
+<p>An analyst working in a cross border watershed or aquifer needs information characterizing their study region from another country of jurisdiction.</p>
 <div class="dlist">
 <dl>
 <dt class="hdlist1"><strong>Relevant datasets</strong></dt>
@@ -1198,7 +1199,7 @@ example application that speaks to and/or satisfies the needs of the use case.</
 </dd>
 <dt class="hdlist1"><strong>Water budget summary</strong></dt>
 <dd>
-<p>A person interested in a basic summary of the water budget for a given watershed needs information about the watershed and its waterbudget data.</p>
+<p>A person interested in a basic summary of the water budget for a given watershed needs information about the watershed and its water budget data.</p>
 <div class="dlist">
 <dl>
 <dt class="hdlist1"><strong>Relevant datasets</strong></dt>
@@ -1212,7 +1213,7 @@ example application that speaks to and/or satisfies the needs of the use case.</
 <p>Watershed outlet location</p>
 </li>
 <li>
-<p>Waterbudget component data</p>
+<p>Water budget component data</p>
 </li>
 <li>
 <p>Links to additional information</p>
@@ -1233,7 +1234,7 @@ example application that speaks to and/or satisfies the needs of the use case.</
 <div class="ulist">
 <ul>
 <li>
-<p>Impaired (e.g. poluted or degraded) waters</p>
+<p>Impaired (e.g. polluted or degraded) waters</p>
 </li>
 <li>
 <p>Drinking water quality violation reports</p>
@@ -1261,7 +1262,7 @@ example application that speaks to and/or satisfies the needs of the use case.</
 <p>A jurisdiction with significant infrastructure near or over waterways needs a system to link waterways, bridges, and various observations for situational awareness and model calibration/validation.</p>
 <div class="dlist">
 <dl>
-<dt class="hdlist1"><strong>Relavant datasets</strong></dt>
+<dt class="hdlist1"><strong>Relevant datasets</strong></dt>
 <dd>
 <div class="ulist">
 <ul>
@@ -1285,7 +1286,7 @@ example application that speaks to and/or satisfies the needs of the use case.</
 </dd>
 <dt class="hdlist1"><strong>Flood Impact Study</strong></dt>
 <dd>
-<p>A hydrologist conducting a flood impact study needs to collect relevant information from parious agencies.</p>
+<p>A hydrologist conducting a flood impact study needs to collect relevant information from various agencies.</p>
 <div class="dlist">
 <dl>
 <dt class="hdlist1"><strong>Relevant datasets</strong></dt>
@@ -1350,6 +1351,44 @@ example application that speaks to and/or satisfies the needs of the use case.</
 </div>
 </dd>
 </dl>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_use_cases_implemented_as_demonstrations_of_outcomes"><a class="anchor" href="#_use_cases_implemented_as_demonstrations_of_outcomes"></a>7.3. Use Cases Implemented as Demonstrations of Outcomes</h3>
+<div class="paragraph">
+<p><strong>Water budget summary</strong>
+This use case provides a person interested in a basic summary of the water budget for a given watershed information about a collection of watersheds and their water budget data. It links together various hydrographic representations of each watershed as well as observational water budget data and related web resources.</p>
+</div>
+<div class="paragraph">
+<p>As shown in the <a href="#img_uswb_data">Figure 1</a>, the watershed feature is linked to various representations of it. This follows the HY_Features concept of a catchment as an <em>unrealized</em> feature that is related to various realization features, there is no canonical representation of the watershed its self.</p>
+</div>
+<div id="img_uswb_data" class="imageblock" style="text-align: center">
+<div class="content">
+<img src="images/uswb.png" alt="uswb" width="800">
+</div>
+<div class="title">Figure 1. Notional diagram of relationships between data in the water budget summary use case.</div>
+</div>
+<div class="paragraph">
+<p>Additional details about the water budget summary use case implementation is available on the <a href="https://opengeospatial.github.io/ELFIE/demo/uswb">demonstration ELFIE web page.</a></p>
+</div>
+<div class="paragraph">
+<p><strong>Watershed data index</strong>
+This use case is meant to demonstrate the use of HY_Features to link a catchment (12 digit hydrologic unit code (HUC12) watershed in this case) to the data representing it as well as the monitoring network associated with it. It serves as a general demonstration that could be used for a wide array of linked watershed information use cases.</p>
+</div>
+<div id="img_huc12obs_data" class="imageblock" style="text-align: center">
+<div class="content">
+<img src="images/uswb.png" alt="uswb" width="800">
+</div>
+<div class="title">Figure 2. Notional diagram of relationships between data in the watershed data index use case.</div>
+</div>
+<div class="paragraph">
+<p>Additional details about the water budget summary use case implementation is available on the <a href="https://opengeospatial.github.io/ELFIE/demo/huc12obs">demonstration ELFIE web page.</a></p>
+</div>
+<div class="paragraph">
+<p><strong>Flood risks and impacts</strong></p>
+</div>
+<div class="paragraph">
+<p><strong>Surface water impacted groundwater level forecasting</strong></p>
 </div>
 </div>
 </div>
