adding a few references

--- a/er/er.html
+++ b/er/er.html
@@ -784,6 +784,21 @@ To obtain additional rights of use, visit <a href="http://www.opengeospatial.org
 <li>
 <p><a href="https://portal.opengeospatial.org/files/?artifact_id=38867&amp;version=2">OGC 06-121r9, OGC® Web Services Common Standard</a></p>
 </li>
+<li>
+<p><a href="http://docs.opengeospatial.org/is/14-111r6/14-111r6.html">OGC 14-111r6, OGC® WaterML 2: Part 3 - Surface Hydrology Features (HY_Features) - Conceptual Model</a></p>
+</li>
+<li>
+<p><a href="http://docs.opengeospatial.org/is/16-032r2/16-032r2.html">OGC 16-032r2, OGC® WaterML 2: Part 4 – GroundWaterML 2 (GWML2)</a></p>
+</li>
+<li>
+<p><a href="http://docs.opengeospatial.org/is/15-043r3/15-043r3.html">OGC 15-043r3, Timeseries Profile of Observations and Measurements</a></p>
+</li>
+<li>
+<p><a href="http://docs.opengeospatial.org/is/09-025r2/09-025r2.html">OGC 09-025r2, OGC® Web Feature Service 2.0 Interface Standard – With Corrigendum</a></p>
+</li>
+<li>
+<p><a href="https://portal.opengeospatial.org/files/?artifact_id=47599">OGC 12-006,	OGC® Sensor Observation Service Interface Standard</a></p>
+</li>
 </ul>
 </div>
 </div>
