figure 2 code fixed

--- a/er/er.html
+++ b/er/er.html
@@ -880,11 +880,11 @@ observational water budget data and related web resources.</p>
 <p>As shown in the <a href="#img_uswb_data">Figure 1</a>, the watershed feature is linked to various
 representations of it. This follows the HY_Features concept of a catchment as
 an <em>unrealized</em> feature that is related to various realization features,
-there is no canonical representation of the watershed its self.</p>
+there is no canonical representation of the watershed itself.</p>
 </div>
 <div id="img_uswb_data" class="imageblock" style="text-align: center">
 <div class="content">
-<img src="images/uswb.png" alt="uswb" width="800">
+<img src="images/uswb.png" alt="uswb" width="600">
 </div>
 <div class="title">Figure 1. Notional diagram of relationships between data in the water budget summary use case.</div>
 </div>
@@ -916,7 +916,7 @@ page.</a></p>
 to respond to flooded transportation infrastructure the information they need
 to understand the impacted assets and flooded roads for a forecast flood.
 Under this use case, a flood forecasting system would be able to discover
-vulnerable infrastructure and assets published by local juridictions as
+vulnerable infrastructure and assets published by local jurisdictions as
 linked data and publish flood forecasts that include potentially impacted
 features in forecast information products.</p>
 </div>
@@ -1820,7 +1820,7 @@ needed to address these issues:</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-06-13 10:35:16 CEST
+Last updated 2018-06-13 11:33:13 CEST
 </div>
 </div>
 </body>
